sass/modules/_comment.scss
.comment {
  margin-top: 1em;
  padding: .5625em;
  /*padding: 1em;*/
  border-left: 1px solid $lightgray;
  border-right: 1px solid $lightgray;
  border-bottom: 1px solid $lightgray;
  border-top: 3px solid $primarycolor;
  font-size: 1em;

  &__children {
    position: relative;
    right: -.625em;
    bottom: -1.625em;
    /*bottom: -.625em;*/
  }
    
  
  &__body {
    position: relative;
  }

  &__avatar {
    float: left;
    margin-right: 1em;
    @extend %clip-path-circle;
  }

  &--first {
    margin-top: 0;
  }

  &__author {

    > h3 {
      /*margin-bottom: 0;*/
    }
  }

  &__author-name {
    margin-top: 0;
    margin-bottom: 0;
    font-weight: 400;
    font-family: $primaryfont;
    color: $primarycolor;
  }

  &__content {
    clear: both;
    margin-top: 1em;
    font-size: 1em;

  }

  &__meta {
    padding-bottom: 1em;
    border-bottom: 1px solid $lightgray;
    line-height: 1.3;
  }
  
  &__metadata {
    text-transform: uppercase;
    font-size: .875em;
    color: $font-color-lighter;

    > a {
      letter-spacing: .05em;
      color: inherit;
      transition-property: color;
      transition-duration: $mediumduration;
      @include red-hover;
    }
  }

  &__reply {
    text-align: right;
    color: $font-color-lighter;

    > a {
      color: inherit;
      transition-property: color;
      transition-duration: $mediumduration;
      @include red-hover;
      
    }
  }

  &__edit {
    
  }
}

.children {
  @extend .comment__children;
  @extend .comments__list;
}

.bypostauthor {
  background: $primarycolorlight;

  h3:after {
    content: "\00a0 Author";
    font-size: .75em;
    text-transform: uppercase;
    font-variant: small-caps;
    letter-spacing: 1px;
  }
}

